Multiobject editting UV map hiding and unhiding doesn't work. #75974

Closed
opened 2020-04-21 18:41:54 +02:00 by Gilberto Rodrigues · 9 comments
Contributor

Blender Version
Broken: all

Short description of error
When editing multiple object UV maps, hiding only affects the active object and 'reveal hidden' only works for active object.

Exact steps for others to reproduce the error
open blender.
duplicate default cube in object mode.
select both cubes.
go to UV editing tab.
enter edit mode.
move one of the cubes UV map to the side.
press A to select all UVs.
press H in the UV editor to hide all UVs. Make sure to hide the UVs in the UV editor, not the mesh.
Congratulations, you found the bug. only one of the UVs will be hidden. And you won't be able to hide the other one in the UV editor whithout going to object mode and changing the active object.

Now to test 'reveal hidden'

Keep in mind the expected behavior:
go to object mode select only one of the cubes, go to edit mode, hide part of the UVs in the UV editor(do not hide not the mesh, hide the UV!). You will see that blender simply deselects the faces in 3d view that you told it to hide the UVs. This is expected. If you alt H to unhide, it will simply select all the geometry in 3d view and show all UVs. This is also expected, but it does not work in multiobject mode.

Time for testing
reopen blender.
duplicate default cube in object mode.
put it to the side.
select both cubes.
click the UV editing tab.
enter edit mode.
move one of the cubes UV map to the side.
in the 3d view Deselect one face of each cube so that they'll be hidden in the UV editor.
press alt H in the UV editor , it will only unhide the faces(reselect in 3d view) of the active object.

**Blender Version** Broken: all **Short description of error** When editing multiple object UV maps, hiding only affects the active object and 'reveal hidden' only works for active object. **Exact steps for others to reproduce the error** open blender. duplicate default cube in object mode. select both cubes. go to UV editing tab. enter edit mode. move one of the cubes UV map to the side. press A to select all UVs. press H in the UV editor to hide all UVs. Make sure to hide the UVs in the UV editor, not the mesh. Congratulations, you found the bug. only one of the UVs will be hidden. And you won't be able to hide the other one in the UV editor whithout going to object mode and changing the active object. **Now to test 'reveal hidden'** Keep in mind the expected behavior: go to object mode select only one of the cubes, go to edit mode, hide part of the UVs in the UV editor(do not hide not the mesh, hide the UV!). You will see that blender simply deselects the faces in 3d view that you told it to hide the UVs. This is expected. If you alt H to unhide, it will simply select all the geometry in 3d view and show all UVs. This is also expected, but it does not work in multiobject mode. Time for testing reopen blender. duplicate default cube in object mode. put it to the side. select both cubes. click the UV editing tab. enter edit mode. move one of the cubes UV map to the side. in the 3d view Deselect one face of each cube so that they'll be hidden in the UV editor. press alt H in the UV editor , it will only unhide the faces(reselect in 3d view) of the active object.
Author
Contributor

Added subscriber: @Gilberto.R

Added subscriber: @Gilberto.R
Author
Contributor

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Contributor

Changed status from 'Confirmed' to: 'Needs Triage'

Changed status from 'Confirmed' to: 'Needs Triage'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, checking...

Can confirm, checking...
Philipp Oeser self-assigned this 2020-04-22 11:14:37 +02:00

This issue was referenced by 470f17f21c

This issue was referenced by 470f17f21c06709443b5634a6fc31dc4dc355daf
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author
Contributor

Wow, you're fast!

Wow, you're fast!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75974
No description provided.