Fix T75974: Multiobject editing UV hiding/unhiding does not work

Seems like this was left out when UV operators were converted to multi-
object-editing, ref T54645.

Maniphest Tasks: T75974

Differential Revision: https://developer.blender.org/D7492